Removed Swagger and OpenAPI
