# src/main/kotlin/dev/maneki/features/health/routes/HealthRoutes.kt
@@ -1,5 +1,12 @@
 package dev.maneki.features.health.routes
 
+import dev.maneki.dtos.ApiResponse
+import dev.maneki.dtos.success
+import dev.maneki.features.authentication.dtos.Foo
+import dev.maneki.features.authentication.dtos.FooData
+import dev.maneki.features.authentication.dtos.LoginResponseDto
+import dev.maneki.features.authentication.dtos.from
+import io.ktor.http.*
 import io.ktor.server.application.*
 import io.ktor.server.response.*
 import io.ktor.server.routing.*
@@ -13,5 +20,10 @@ fun Route.healthRouting() {
 fun Route.pingRoute() {
     get("status") {
         call.respond("OK")
+    }
+
+    get("derp") {
+//        call.respond("OK")
+        call.respond(HttpStatusCode.OK, Foo(data = FooData(name = "Jonathan")))
     }
 }
