# src/main/resources/openapi/documentation.yaml
@@ -50,6 +50,16 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/Unit"
+  /health/derp:
+    get:
+      description: ""
+      responses:
+        "200":
+          description: "OK <br> call.respond(\"OK\")"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/Foo"
   /health/status:
     get:
       description: ""
@@ -129,6 +139,18 @@ components:
       type: "object"
       properties:
         refreshToken:
+          type: "string"
+    FooData:
+      type: "object"
+      properties:
+        name:
+          type: "string"
+    Foo:
+      type: "object"
+      properties:
+        data:
+          $ref: "#/components/schemas/FooData"
+        error:
           type: "string"
     Instant:
       type: "object"
